--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
 </head>
 <body>
     <h1>Emily's Portfolio</h1>
-    <h2>Projects:</h2>
+    <h2>About Me:</h2>
     <p></p>
 <h3>What would I like to do in the future:</h2>
-<p>In the future, I am not exactly sure on a specific job on what i would like to do, however, I would definitely like to travel and to go abroad in the future since ther eis so much in the world that I can see and experience and it is something that I find quite enjoyable.</p>
-<h4>Countries that I would like to visit:</h4>
-<li>Greece</li>
-<li>Italy</li>
-<li>China</li>
-<li>Maldives</li>
-<li>South Korea</li>
+<p>In the future, I am not exactly sure on a specific job on what i would like to do, however, I would definitely like to travel and to go abroad in the future since there is so much in the world that I can see and experience and it is something that I find quite enjoyable. Other things that I would like to do or have is to have 2 cats.</p>
+<h4> Work Experiences</h4>
+
+<p></p>
+
 </body>
 </html>
