--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 <p>In the future, I am not exactly sure on a specific job on what i would like to do, however, I would definitely like to travel and to go abroad in the future since there is so much in the world that I can see and experience and it is something that I find quite enjoyable. Other things that I would like to do or have is to have 2 cats.</p>
 <h4> Work Experiences</h4>
 
-<p></p>
+<p> I have worked as lawyer's receptionist. 
+    This requires me to be able to work independantly on tasks and to use my understanding and knowledge to complete tasts to the best of my ability.
+    I also had to open documents and type up documents correctly and in a specific format that is legally required to have.
+    Also, I had to write TR1 to be approved for registeration for transaction. This has to be completed for every housing property since it is legally required.
+    Other things which are part of the job is that I have to retrieve mail and open  </p>
 
 </body>
 </html>
